@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="plugin.video.moziklub" name="Moziklub" version="1.0.0" provider-name="vargalex">
+<addon id="plugin.video.moziklub" name="Moziklub" version="1.0.1" provider-name="vargalex">
 	<requires>
 		<import addon="script.module.resolveurl" version="5.1.00"/>
 		<import addon="script.module.inputstreamhelper" version="0.4.3"/>
@@ -12,7 +12,7 @@
 		<description lang="en">Nézd meg a filmeket, sorozatokat a https://moziklub.net/ oldalról!</description>
 		<language>hu</language>
 		<platform>all</platform>
-		<news>- Első verzió
+		<news>- Ékezetes keresés javítása
 		</news>
 		<assets>
 		  <icon>icon.png</icon>
